# Amadeus-AI

./: .cache_ggshield  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  API_IMPROVEMENTS.md  DATABASE_OPTIMIZATIONS.md  Dockerfile  MIGRATION_GUIDE.md  README.md  debug_gemini.py  docker-compose.yml  memory.json  pyproject.toml  requirements.txt  ssd.py  test_voice.html
Amadeus/: .env  MIGRATION_GUIDE.md  amadeus.db  amadeus.db-shm  amadeus.db-wal  amadeus.py  api.py  calendar_utils.py  clock_service.py  config.py  dashboard.py  db.py  decorators.py  exceptions.py  general_utils.py  main.py  memory.json  memory_utils.py  middleware.py  models.py  note_utils.py  pomodoro_utils.py  reminder_utils.py  requirements.txt  schemas.py  security.py  speech_utils.py  system_controls.py  system_monitor.py  task_utils.py  test_log.txt  voice_service.py
Amadeus/Model/: amadeus_tool_classifier.joblib  amadeus_vectorizer.joblib
Amadeus/data/: training_data.xlsx
Amadeus/migrations/: __init__.py  env.py
Amadeus/migrations/versions/: 055ec74385e2_refactor_db_enums_and_utc.py
Amadeus/tests/: conftest.py  test_api.py  test_core.py  test_tools.py
amadeus_venv/: pyvenv.cfg
amadeus_venv/Scripts/: activate  activate.bat
data/: amadeus.db
src/: __init__.py  container.py
src/api/: server.py
src/api/routes/: chat.py  health.py  tasks.py  voice.py
src/app/services/: agent_loop.py  amadeus_service.py  tool_registry.py  voice_service.py
src/core/: __init__.py  config.py  exceptions.py
src/core/domain/: models.py
src/core/interfaces/: __init__.py  repositories.py  services.py
src/infra/llm/: __init__.py  gemini_adapter.py
src/infra/persistence/: __init__.py  database.py  orm_models.py
src/infra/persistence/repositories/: conversation_repository.py  task_repository.py
src/infra/speech/: __init__.py  adapters.py
src/infra/tools/: __init__.py  base.py  info_tools.py  monitor_tools.py  productivity_tools.py  system_tools.py
tests/: conftest.py
tests/integration/: __init__.py
tests/integration/api/: test_health.py
tests/unit/: __init__.py
tests/unit/core/: test_config.py
